update ui styling

--- a/resources/views/user/careers.html
+++ b/resources/views/user/careers.html
@@ -49,14 +49,14 @@
             <div class="mxw-800 text-center m-auto">
               <div class="career-card-box mb-64">
                 <div class="career-card">
-                  <img src="./dist/images/career/Icon-1.png" class="img-fluid career-icon" alt="...">
+                  <img src="{{ URL::asset('dist/images/career/Icon-1.png') }}" class="img-fluid career-icon" alt="...">
                   <div class="career-card-body pt-32">
                     <h5 class="career-card-title">Flexible Work Arrangements</h5>
                     <h6 class="card-text">Choose from part-time or freelance contracts that align with your lifestyle and goals.</h6>                    
                   </div>
                 </div>
                 <div class="career-card">
-                  <img src="./dist/images/career/Icon-2.png" class="img-fluid career-icon" alt="...">
+                  <img src="{{ URL::asset('dist/images/career/Icon-2.png') }}" class="img-fluid career-icon" alt="...">
                   <div class="career-card-body pt-32">
                     <h5 class="career-card-title">Sponsorship Opportunities</h5>
                     <h6 class="card-text">We offer support and sponsorship for your professional development and certifications.</h6>                    
@@ -65,14 +65,14 @@
               </div>
               <div class="career-card-box">
                 <div class="career-card">
-                  <img src="./dist/images/career/Icon-3.png" class="img-fluid career-icon" alt="...">
+                  <img src="{{ URL::asset('dist/images/career/Icon-3.png') }}" class="img-fluid career-icon" alt="...">
                   <div class="career-card-body pt-32">
                     <h5 class="career-card-title">Access to Premium Venues</h5>
                     <h6 class="card-text">Work with top-tier fitness and wellness venues that elevate your professional experience.</h6>                    
                   </div>
                 </div>
                 <div class="career-card">
-                  <img src="./dist/images/career/Icon-4.png" class="img-fluid career-icon" alt="...">
+                  <img src="{{ URL::asset('dist/images/career/Icon-4.png') }}" class="img-fluid career-icon" alt="...">
                   <div class="career-card-body pt-32">
                     <h5 class="career-card-title">Partnerships & Collaborations</h5>
                     <h6 class="card-text">Expand your career through our vibrant network and collaborative opportunities.</h6>                    
@@ -93,7 +93,7 @@
             <div class="ready-to-evolve-content p64">
               <h3>Ready to Evolve?</h3>
               <p>Reach out to us to learn more about our services, schedule a consultation, or inquire about our corporate wellness programs.</p>
-              <a href="#" class="btn btn-schedule">Get in Touch <span class="ps-3"><img src="./dist/images/fitness-classes/Right.png" class="img-fluid" alt=""></span></a>
+              <a href="#" class="btn btn-schedule">Get in Touch <span class="ps-3"><img src="{{ URL::asset('dist/images/fitness-classes/Right.png') }}" class="img-fluid" alt=""></span></a>
             </div>
           </div>
         </div>
